<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/colorPrimaryDark">

    <ImageView
        android:layout_height="100dp"
        android:layout_width="100dp"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/ic_lazy_logo"
        android:backgroundTint="@color/transparent"
        android:id="@+id/title_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/title_logo"
        android:text="@string/text_title_signup"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textColor="@color/colorIcons"
        android:id="@+id/title_text_signup"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">

        <EditText

            android:id="@+id/iemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:textSize="20dp"
            android:hint="@string/hint_email"
            android:textColor="@color/colorIcons"
            android:textColorHint="@color/colorIcons" />

        <EditText
            android:id="@+id/ipassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginTop="15dp"
            android:layout_below="@id/iemail"
            android:ems="10"
            android:inputType="textPassword"
            android:textSize="20dp"
            android:hint="@string/hint_pwd"
            android:textColor="@color/colorIcons"
            android:textColorHint="@color/colorIcons" />

        <Button
            android:id="@+id/bregister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_below="@id/ipassword"
            android:text="@string/text_signup"
            android:background="@color/colorIcons"
            android:textColorHint="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/ologinlink"
            android:layout_below="@id/bregister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:textSize="15dp"
            android:textColor="@color/colorIcons"
            android:text="@string/text_link_login"
            />

    </RelativeLayout>

</RelativeLayout>