<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="2dp"
    android:layout_marginBottom="10dp">

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_nickname"
                android:textSize="12dp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                android:id="@+id/onick" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/onick"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="5dp"
                android:text="@string/text_message"
                android:textSize="12dp"
                android:textColor="@color/colorPrimary"
                android:id="@+id/omsg" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/omsg"
                android:layout_marginRight="15dp"
                android:text="@string/text_margin"
                android:textSize="8dp"
                android:textColor="@color/transparent"
                android:id="@+id/text_margin" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/omsg"
                android:layout_toRightOf="@+id/text_margin"
                android:text="99/99/99"
                android:textStyle="italic"
                android:textAlignment="viewEnd"
                android:textSize="8dp"
                android:textColor="@color/colorDivider"
                android:id="@+id/otime" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>